added model for Student and Order added view for payment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 django
 psycopg2
-# gspread
-# gspread_formatting
+gspread
+gspread_formatting
 # google-api-python-client
 django-crispy-forms
 crispy_bootstrap4
